--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,8 @@ body.contents_page {/* classにcontents_pageが指定されているbodyタグ *
 トップページ
 ================================================= */
 .top_eye_catch {
-  height: 1000px;
+  height: 600px;
+  font-size: 100px;
   color: #fff;
   font-weight: bold;
   background-image: url(../images/top.jpg);/* 背景画像 */
