--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,7 @@ reportページ
 
 .report_eye_catch {
   height: 300px;
-  background-image: url(../images/report.jpg);
+  background-image: url(../images/岡田健史.jpg);
   background-size: cover;
   background-position: center center;
   display: flex;
